Seguridad: he escondido al .env y he cambiado las claves secretas del JWT y contraseña postrgrees que estaban expuestas en application.properties, he escondido el CORS que antes permitia peticiones de cualquir web